# lazyagent

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  pyproject.toml
src/: main.rs
src/config/: mod.rs
src/lazyagent/: __main__.py  app.py  styles.tcss
src/lazyagent/agent/: client.py  messages.py
src/lazyagent/state/: models.py  persist.py
src/lazyagent/widgets/: output_panel.py  prompt_input.py  status_bar.py  tree_panel.py
src/state/: tasks.rs
tests/: main_loop_test.rs  module_structure_test.rs
